feat: campaign slider section  added

--- a/src/Layouts/HomeLayout/Footer/style.css
+++ b/src/Layouts/HomeLayout/Footer/style.css
@@ -4,6 +4,6 @@
 }
 
 .footer-categories-list li:hover{
-    @apply text-green-600 transform translate-x-2;
+    @apply text-primary transform translate-x-2;
 }
 
